[package]
name = "steel-copper"
version = "0.1.0"
authors = ["Bjoern Griebenow <b.griebenow@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT/Apache-2.0"

[dependencies]
rocket = "0.4.5"
tera = "*"
lazy_static = "*"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = [ "tera_templates" ]
