[package]
name          = "steel-copper"
version       = "0.1.0"
authors       = ["Bjoern Griebenow <b.griebenow@web.de>"]
edition       = "2018"

# build = "build/main.rs"
repository    = "https://github.com/schanur/steel-copper"

#documentation = "https://docs.rs/steel-copper"
readme        = "README.md"
license       = "MIT/Apache-2.0"
description   = "Steel-Copper is a simple system monitoring tool which uses rrdgraph to generate graphs and rocket as web server."
homepage      = "https://github.com/schanur/steel-copper"
documentation = "https://github.com/schanur/steel-copper/blob/master/README.md"
keywords      = ["monitoring", "graph", "rrdtool", "rrdgraph", "load"]
categories    = ["value-formatting", "visualization", "web-programming::http-server", "database"]


[dependencies]
# rocket                          = "0.4.*"
rocket                          = "0.5.0-rc.2"
tera                            = "0.11.*"
lazy_static                     = "1.4.*"
# rocket-include-tera             = "0.4.*" # "0.4.19"
# rocket-include-static-resources = "0.9.*"

# [dependencies.rocket_contrib]
# rocket           = "0.5.0-rc.2"
# # version          = "0.4.*"
# default-features = false
# # features         = [ "tera_templates" ]
